force-app/main/default/objects/Lead/fields/Content_Message__c.field-meta.xml
<CustomField>
    <fullName>Content_Message__c</fullName>
    <label>Content Message</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>1-3-lookalike-af-alle-leads</fullName>
            </value>
            <value>
                <fullName>4-6-lookalike-af-alle-leads</fullName>
            </value>
            <value>
                <fullName>Alle-med-boern-18-til-26</fullName>
            </value>
            <value>
                <fullName>Alle-med-boern-som-er-i-forhold</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon 02122020</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122020</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122023</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122024</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122025</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122026</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122027</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122028</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122029</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122030</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122031</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122032</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122033</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122034</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122035</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122036</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122037</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122038</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122039</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122040</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122041</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122042</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122043</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122044</fullName>
            </value>
            <value>
                <fullName>Arvetest over telefon, ved de bliver kontaktet 02122046</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>