force-app/main/default/objects/Lead/fields/Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Time__c</fullName>
    <formula>((ConvertedDate  -  DATEVALUE(CreatedDate)) * 24)*3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Time (In Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>