force-app/main/default/objects/Lead/fields/Converted_Hour__c.field-meta.xml
<CustomField>
    <fullName>Converted_Hour__c</fullName>
    <formula>IF(
    ISBLANK(Closed_Date__c),
	NULL,
      VALUE(TEXT(
     CASE(
          VALUE(RIGHT(LEFT(text(Closed_Date__c),FIND(&quot;:&quot;, TEXT( Closed_Date__c ))-1),2)), 
          00,19, 
          01,20, 
          02,21, 
          03,22, 
          04,23, 
          05,00, 
          06,01, 
          07,02, 
          08,03, 
          09,04, 
          10,05, 
          11,06, 
          12,07, 
          13,08, 
          14,09, 
          15,10, 
          16,11, 
          17,12, 
          18,13, 
          19,14, 
          20,15, 
          21,16, 
          22,17, 
          23,18, 
          00
      )
 )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>