force-app/main/default/objects/Lead/fields/Converted_Hour_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Converted_Hour_Formatted__c</fullName>
    <formula>IF( Converted_Hour__c &gt;= 9,IF(
     LEN( TEXT(Converted_Hour__c) ) = 1, 
          &apos;0&apos; + TEXT(Converted_Hour__c)+ &apos;:00 - 0&apos; + TEXT(Converted_Hour__c)+ &apos;:59&apos;,
          TEXT(Converted_Hour__c)+ &apos;:00 - &apos; + TEXT(Converted_Hour__c)+ &apos;:59&apos;),NULL
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Hour Formatted</label>
    <type>Text</type>
</CustomField>