force-app/main/default/objects/Lead/fields/Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>Converted_Status__c</fullName>
    <label>Converted Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Converted promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>