force-app/main/default/objects/Lead/fields/Createdvscloseddate__c.field-meta.xml
<CustomField>
    <fullName>Createdvscloseddate__c</fullName>
    <formula>CreatedDate - Closed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Createdvscloseddate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>