force-app/main/default/objects/Lead/fields/Currently_in_Marketing_Flow__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_Marketing_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently in Marketing Flow</label>
    <type>Checkbox</type>
</CustomField>