force-app/main/default/objects/Lead/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <label>CVR</label>
    <length>15</length>
    <type>Text</type>
</CustomField>