force-app/main/default/objects/Lead/fields/Date_and_time_of_obl_end_and_call_record__c.field-meta.xml
<CustomField>
    <fullName>Date_and_time_of_obl_end_and_call_record__c</fullName>
    <description>This field will auto populate when the sales rep checks the &quot;Obl ending and call record permission&quot; checkbox</description>
    <label>Date and time of obl end and call record</label>
    <type>DateTime</type>
</CustomField>