force-app/main/default/objects/Lead/fields/Date_Received_from_Findforsikring_dk__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_from_Findforsikring_dk__c</fullName>
    <label>Date Received from Findforsikring.dk</label>
    <type>DateTime</type>
</CustomField>