force-app/main/default/objects/Lead/fields/Dato_for_booking__c.field-meta.xml
<CustomField>
    <fullName>Dato_for_booking__c</fullName>
    <inlineHelpText>Dato for hvornår emnet er videregivet</inlineHelpText>
    <label>Dato for videregivelse</label>
    <type>Date</type>
</CustomField>