force-app/main/default/objects/Lead/fields/Days_to_Close_Lecture__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close_Lecture__c</fullName>
    <formula>IF(
  ISBLANK(Foredragsdato__c),
  NULL,
  MAX(
    0,
    IF(
      ISBLANK(Closed_Date__c),
      TODAY() - Foredragsdato__c,
      DATEVALUE(Closed_Date__c) - Foredragsdato__c
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the days between Foredragsdato and Closed Date. If Closed Date is not yet set, it uses &quot;TODAY&quot; instead. Cannot go below 0.</inlineHelpText>
    <label>Days to Close (Lecture)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>