force-app/main/default/objects/Lead/fields/Dedicated_owner__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_owner__c</fullName>
    <label>Dedicated owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sofus</fullName>
            </value>
            <value>
                <fullName>Phillip</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Lars</fullName>
            </value>
            <value>
                <fullName>Stig</fullName>
            </value>
            <value>
                <fullName>Ronnie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>