force-app/main/default/objects/Lead/fields/Default_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>