force-app/main/default/objects/Lead/fields/Deltager_I_begge_til_m_det__c.field-meta.xml
<CustomField>
    <fullName>Deltager_I_begge_til_m_det__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deltager I begge til mødet?</label>
    <type>Checkbox</type>
</CustomField>