force-app/main/default/objects/Lead/fields/Digital_Lecture_Form_through_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Digital_Lecture_Form_through_QR_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Lecture Form through QR-Code</label>
    <type>Checkbox</type>
</CustomField>