force-app/main/default/objects/Lead/fields/Donationlead__c.field-meta.xml
<CustomField>
    <fullName>Donationlead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donationlead</label>
    <type>Checkbox</type>
</CustomField>