force-app/main/default/objects/Lead/fields/Duplicate_of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate of</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>