force-app/main/default/objects/Lead/fields/Ejer_du_fast_ejendom__c.field-meta.xml
<CustomField>
    <fullName>Ejer_du_fast_ejendom__c</fullName>
    <label>Ejer du/I fast ejendom?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>