force-app/main/default/objects/Lead/fields/Ejer_eller_lejer_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Ejer_eller_lejer_Calendly__c</fullName>
    <label>Ejer eller lejer? (Calendly)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enter value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>