force-app/main/default/objects/Lead/fields/Ekstern_r_dgiver__c.field-meta.xml
<CustomField>
    <fullName>Ekstern_r_dgiver__c</fullName>
    <label>Ekstern rådgiver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jonatan Bolin</fullName>
            </value>
            <value>
                <fullName>Andy</fullName>
            </value>
            <value>
                <fullName>Danny</fullName>
            </value>
            <value>
                <fullName>Emilia</fullName>
            </value>
            <value>
                <fullName>Anton J</fullName>
            </value>
            <value>
                <fullName>Denis</fullName>
            </value>
            <value>
                <fullName>Sofus</fullName>
            </value>
            <value>
                <fullName>Flemming Abildtrup</fullName>
            </value>
            <value>
                <fullName>Michael Jepsen</fullName>
            </value>
            <value>
                <fullName>Tina Lundquist</fullName>
            </value>
            <value>
                <fullName>Rasmus Wedell</fullName>
            </value>
            <value>
                <fullName>Kristian Holdt</fullName>
            </value>
            <value>
                <fullName>Line Barfoed</fullName>
            </value>
            <value>
                <fullName>Flemming Stelling</fullName>
            </value>
            <value>
                <fullName>Bo Rathsach</fullName>
            </value>
            <value>
                <fullName>Fatih Tamer</fullName>
            </value>
            <value>
                <fullName>Timm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>