force-app/main/default/objects/Lead/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>Secondary email address</description>
    <label>Email2</label>
    <type>Email</type>
</CustomField>