force-app/main/default/objects/Lead/fields/Er_der_f_lles_ellers_sammenbragte_b_rn__c.field-meta.xml
<CustomField>
    <fullName>Er_der_f_lles_ellers_sammenbragte_b_rn__c</fullName>
    <label>Er der fælles ellers sammenbragte børn?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item #1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>