force-app/main/default/objects/Lead/fields/Er_du_selvst_ndig__c.field-meta.xml
<CustomField>
    <fullName>Er_du_selvst_ndig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Er du selvstændig?</label>
    <type>Checkbox</type>
</CustomField>