force-app/main/default/objects/Lead/fields/Estimeret_samlet_v_rdi_for_boet__c.field-meta.xml
<CustomField>
    <fullName>Estimeret_samlet_v_rdi_for_boet__c</fullName>
    <label>Estimeret samlet værdi for boet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>