force-app/main/default/objects/Lead/fields/Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_DateTime__c</fullName>
    <label>Event DateTime</label>
    <type>DateTime</type>
</CustomField>