force-app/main/default/objects/Lead/fields/Event_moedestatus_c__c.field-meta.xml
<CustomField>
    <fullName>Event_moedestatus_c__c</fullName>
    <description>Used to show whether a lead has been met (show) or not attended ( No show) an event</description>
    <label>Event mødestatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Order cancelled</fullName>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Tilmeldingsblanket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>