force-app/main/default/objects/Lead/fields/Expired_Lecture_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Expired_Lecture_Form_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is set by an administrator, if the customer has previously submitted a &quot;Tilmeldingsblanket&quot;, but has since booked tickets for a new lecture</inlineHelpText>
    <label>Expired Lecture Form Submission</label>
    <type>Checkbox</type>
</CustomField>