force-app/main/default/objects/Lead/fields/FBCLID__c.field-meta.xml
<CustomField>
    <fullName>FBCLID__c</fullName>
    <label>FBCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>