force-app/main/default/objects/Lead/fields/Featured_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Featured_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Featured Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>