force-app/main/default/objects/Lead/fields/Fejls_gning_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Fejls_gning_Calendly__c</fullName>
    <description>Dette felt bliver udfyldt med en statisk værdi fra hvert flow, for at finde ud af hvilket flow der smider forkert data afsted.</description>
    <label>Fejlsøgning (Calendly)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>