force-app/main/default/objects/Lead/fields/FlowTrigger_Create_Ticket__c.field-meta.xml
<CustomField>
    <fullName>FlowTrigger_Create_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlowTrigger: Create Ticket</label>
    <type>Checkbox</type>
</CustomField>