force-app/main/default/objects/Lead/fields/FM_Lead__c.field-meta.xml
<CustomField>
    <fullName>FM_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F&amp;M Lead</label>
    <type>Checkbox</type>
</CustomField>