force-app/main/default/objects/Lead/fields/Foredrag_F_rdigt__c.field-meta.xml
<CustomField>
    <fullName>Foredrag_F_rdigt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foredrag Færdigt</label>
    <type>Checkbox</type>
</CustomField>