force-app/main/default/objects/Lead/fields/Foredragsdato__c.field-meta.xml
<CustomField>
    <fullName>Foredragsdato__c</fullName>
    <label>Foredragsdato</label>
    <type>Date</type>
</CustomField>