force-app/main/default/objects/Lead/fields/Foredragsdatovscloseddate__c.field-meta.xml
<CustomField>
    <fullName>Foredragsdatovscloseddate__c</fullName>
    <formula>Foredragstid_og_dato__c - Closed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foredragsdatovscloseddate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>