force-app/main/default/objects/Lead/fields/Foredragsevent_created__c.field-meta.xml
<CustomField>
    <fullName>Foredragsevent_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foredragsevent created</label>
    <type>Checkbox</type>
</CustomField>