force-app/main/default/objects/Lead/fields/Foredragskommentar__c.field-meta.xml
<CustomField>
    <fullName>Foredragskommentar__c</fullName>
    <inlineHelpText>The note will be cut off if it is too long. You can find the full not under &quot;Campaign History&quot; and the relevant lecture.</inlineHelpText>
    <label>Foredragskommentar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>