force-app/main/default/objects/Lead/fields/Foredragstype__c.field-meta.xml
<CustomField>
    <fullName>Foredragstype__c</fullName>
    <label>Foredragstype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Fysisk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>