force-app/main/default/objects/Lead/fields/Forsikring_Sendt_til_Honestus__c.field-meta.xml
<CustomField>
    <fullName>Forsikring_Sendt_til_Honestus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Emnet er sendt til Honestus med henblik på forsikring</description>
    <inlineHelpText>Emnet er sendt til Honestus med henblik på forsikring</inlineHelpText>
    <label>Forsikring - Sendt til Honestus</label>
    <type>Checkbox</type>
</CustomField>