force-app/main/default/objects/Lead/fields/Forsikring_Status_Honestus__c.field-meta.xml
<CustomField>
    <fullName>Forsikring_Status_Honestus__c</fullName>
    <label>Forsikring - Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afventer</fullName>
                <default>true</default>
                <label>Afventer</label>
            </value>
            <value>
                <fullName>Godkendt</fullName>
            </value>
            <value>
                <fullName>Ikke godkendt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>