force-app/main/default/objects/Lead/fields/Forsikring_StatusRed__c.field-meta.xml
<CustomField>
    <fullName>Forsikring_StatusRed__c</fullName>
    <formula>IF( Forsikring_Sendt_til_Honestus__c = TRUE, IF(ISBLANK(TEXT( Forsikring_Status_Honestus__c )),&quot;Afventer&quot;,TEXT( Forsikring_Status_Honestus__c )),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forsikring - StatusRed</label>
    <type>Text</type>
</CustomField>