force-app/main/default/objects/Lead/fields/Frit_pensionsvalg__c.field-meta.xml
<CustomField>
    <fullName>Frit_pensionsvalg__c</fullName>
    <label>Frit pensionsvalg</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
            <value>
                <fullName>Ved ikke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>