force-app/main/default/objects/Lead/fields/Friv_rdi_i_bolig__c.field-meta.xml
<CustomField>
    <fullName>Friv_rdi_i_bolig__c</fullName>
    <label>Friværdi i bolig</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>