force-app/main/default/objects/Lead/fields/Gavekort_1_000_kr_rabat_og_r_dgivning__c.field-meta.xml
<CustomField>
    <fullName>Gavekort_1_000_kr_rabat_og_r_dgivning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kunden har sat kryds i at de ønsker at give en bekendt et gavekort med 1.000 kr. rabat og gratis rådgivning</description>
    <label>Gavekort - 1.000 kr. rabat og rådgivning</label>
    <type>Checkbox</type>
</CustomField>