force-app/main/default/objects/Lead/fields/Gemensamma_eller_s_rkullbarn__c.field-meta.xml
<CustomField>
    <fullName>Gemensamma_eller_s_rkullbarn__c</fullName>
    <inlineHelpText>If the customer has both, select &quot;särkullbarn&quot;</inlineHelpText>
    <label>Gemensamma eller särkullbarn?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>