force-app/main/default/objects/Lead/fields/Gen_bnet__c.field-meta.xml
<CustomField>
    <fullName>Gen_bnet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er leadet blevet genåbnet?</description>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>