force-app/main/default/objects/Lead/fields/Genindl_st__c.field-meta.xml
<CustomField>
    <fullName>Genindl_st__c</fullName>
    <description>Feltet benyttes til at indskrive hvis gamle emner sættes ind igen. Her skrives dato, publisher name og  emnetype i navnet</description>
    <label>Genindlæst</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FBgratisBTmix1609</fullName>
            </value>
            <value>
                <fullName>FBgratisBTmix28102019</fullName>
            </value>
            <value>
                <fullName>100120Genindlæstpostmaxcall</fullName>
            </value>
            <value>
                <fullName>14022020Mix</fullName>
            </value>
            <value>
                <fullName>Emailkampagne_08-10-2021_2000 kr. gavekort til testamente</fullName>
            </value>
            <value>
                <fullName>TilmeldtIgenInteresseDublet_21102021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>