force-app/main/default/objects/Lead/fields/Got_risk_assessment__c.field-meta.xml
<CustomField>
    <fullName>Got_risk_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du få taget en risikovurdering</label>
    <type>Checkbox</type>
</CustomField>