force-app/main/default/objects/Lead/fields/GSID__c.field-meta.xml
<CustomField>
    <fullName>GSID__c</fullName>
    <label>GSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>