force-app/main/default/objects/Lead/fields/Har_accepteret_medlemsbetingelser__c.field-meta.xml
<CustomField>
    <fullName>Har_accepteret_medlemsbetingelser__c</fullName>
    <label>Har accepteret medlemsbetingelser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item #1</fullName>
            </value>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>JA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>