force-app/main/default/objects/Lead/fields/Har_du_b_rn_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Har_du_b_rn_Calendly__c</fullName>
    <label>Har du børn? (Calendly)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enter value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>