force-app/main/default/objects/Lead/fields/Har_du_barn__c.field-meta.xml
<CustomField>
    <fullName>Har_du_barn__c</fullName>
    <label>Har du barn?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>