force-app/main/default/objects/Lead/fields/Har_du_I_b_rn__c.field-meta.xml
<CustomField>
    <fullName>Har_du_I_b_rn__c</fullName>
    <label>Har du/I børn?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nej</fullName>
            </value>
            <value>
                <fullName>Ja, sammenbragte børn</fullName>
            </value>
            <value>
                <fullName>Ja, fælles børn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>