force-app/main/default/objects/Lead/fields/Har_du_I_eller_en_af_jer_s_reje__c.field-meta.xml
<CustomField>
    <fullName>Har_du_I_eller_en_af_jer_s_reje__c</fullName>
    <label>Har du/I (eller en af jer) særeje?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>