force-app/main/default/objects/Lead/fields/Har_du_I_f_lles_eller_sammenbragte_b_rn__c.field-meta.xml
<CustomField>
    <fullName>Har_du_I_f_lles_eller_sammenbragte_b_rn__c</fullName>
    <label>Har du/I fælles eller sammenbragte børn?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item #1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>