force-app/main/default/objects/Lead/fields/Har_du_I_fremtidsfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>Har_du_I_fremtidsfuldmagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du/I fremtidsfuldmagt?</label>
    <type>Checkbox</type>
</CustomField>