force-app/main/default/objects/Lead/fields/Har_du_I_nogen_andre_dokumenter__c.field-meta.xml
<CustomField>
    <fullName>Har_du_I_nogen_andre_dokumenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du/I nogen andre dokumenter?</label>
    <type>Checkbox</type>
</CustomField>