force-app/main/default/objects/Lead/fields/Har_du_I_nogle_arvinger__c.field-meta.xml
<CustomField>
    <fullName>Har_du_I_nogle_arvinger__c</fullName>
    <label>Har du/I nogle arvinger?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>