force-app/main/default/objects/Lead/fields/Har_Livsforsikring__c.field-meta.xml
<CustomField>
    <fullName>Har_Livsforsikring__c</fullName>
    <label>Har Livsforsikring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>