force-app/main/default/objects/Lead/fields/Has_car__c.field-meta.xml
<CustomField>
    <fullName>Has_car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har bil</label>
    <type>Checkbox</type>
</CustomField>