force-app/main/default/objects/Lead/fields/Has_children__c.field-meta.xml
<CustomField>
    <fullName>Has_children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du børn</label>
    <type>Checkbox</type>
</CustomField>